added volume to market table
